se agrega el proyecto

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 </header>
 <div class="bienvenida">
     <p>
-    ROSARIO, 
-    una ciudad que lo tiene todo.
+    ROSARIO, una ciudad que lo tiene todo. Conoce todas las actividades culturales y recreativas que podes encontrar en nuestra ciudad. Queremos compartir con ustedes nuestro rio, parques, restaurants, edificios historicos, museos y mucho mas. Los esperamos!
 </p>
 </div>
 <div class="identifica">
